# TwentyFourtyEight-Simulator

./: README.md
TwentyFourtyEight-Simulator/: TwentyFourtyEight-Simulator.cabal
TwentyFourtyEight-Simulator/src/: Bench.hs  Main.hs
TwentyFourtyEight-Simulator/src/Simulation/: TwentyFourtyEight.hs
TwentyFourtyEight-Simulator/src/Simulation/TwentyFourtyEight/: Internal.hs
TwentyFourtyEight-Simulator/test/Simulation/: TwentyFourtyEightSpec.hs
